@@ -6,18 +6,30 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>be.jdevelopment.tools</groupId>
     <artifactId>validation</artifactId>
-    <version>1.1</version>
+    <version>2.1</version>
+
+    <properties>
+        <java.version>14</java.version>
+    </properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <release>14</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
-                <version>2.5.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
